examples/invalid/05_multiple_expression_statements.lane
// invalid: every non-final expression in a block must have type Unit
module Examples.Invalid05

pub fn bad() -> Int {
  1
  2
}
